# multiprocessing

./: CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  Makefile  Training Diary.docx  cmake_install.cmake  grayscale.cl  main.cpp  multipro  multipro.cbp  resize.cl  results.txt
